# cosmic-ext-tweaks

./: Cargo.toml  default.nix  dev.edfloreshz.CosmicTweaks.json
.github/workflows/: flatpak.yml
i18n/en/: cosmic_ext_tweaks.ftl
i18n/fr/: cosmic_ext_tweaks.ftl
i18n/pt-BR/: cosmic_ext_tweaks.ftl
res/: metainfo.xml
res/layouts/: cosmic.ron  mac.ron  ubuntu.ron  windows.ron
src/app/: context.rs  dialog.rs  footer.rs  header.rs  init.rs  nav.rs  page.rs  update.rs  view.rs
src/app/core/: mod.rs  reset.rs  style.rs
src/app/pages/: dock.rs  shortcuts.rs
src/app/pages/color_schemes/: mod.rs  view.rs
src/app/pages/layouts/: dialog.rs  mod.rs  preview.rs
src/app/pages/panel/: mod.rs
src/app/pages/snapshots/: config.rs  mod.rs
