[package]
name = "cosmic-ext-tweaks"
version = "0.2.1"
edition = "2024"

[dependencies]
dirs = "6"
env_logger = "0.11"
i18n-embed-fl = "0.10"
log = "0.4"
open = "5"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
ron = "0.11"
rust-embed = "8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
serde_json = "1"
nucleo = "0.5"
icu_collator = "2"
icu_provider = { version = "2", features = ["sync"] }

[dependencies.ashpd]
version = "0.12"
default-features = false
features = ["async-std"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    # About widget for the app
    "about",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # GPU-accelerated rendering
    "wgpu",
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Add Wayland support to winit
    "wayland",
]

[dependencies.cosmic-ext-config-templates]
git = "https://github.com/ryanabx/cosmic-ext-config-templates"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[dependencies.cosmic-settings-config]
git = "https://github.com/pop-os/cosmic-settings-daemon"

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.tokio]
version = "1"
features = ["macros", "fs", "rt"]

#[patch."https://github.com/pop-os/libcosmic.git"]
#libcosmic = { path = "../../edfloreshz-ext/libcosmic" }
#cosmic-config = { path = "../../edfloreshz-ext/libcosmic/cosmic-config" }
#cosmic-config-derive = { path = "../../edfloreshz-ext/libcosmic/cosmic-config-derive" }
#cosmic-theme = { path = "../../edfloreshz-ext/libcosmic/cosmic-theme" }
